Меняет первоначальное поведение игры

--- a/index.html
+++ b/index.html
@@ -181,7 +181,31 @@
   </div>
 </template>
 
-<script src="js/game.js"></script>
+<script>
+  var fireballSize = 22;
+  var getFireballSpeed = function(left) {
+    if (left) {
+      return 5;
+    } else {
+      return 2;
+    }
+  };
 
+  wizardSpeed = 3;
+  wizardWidth = 70;
+
+  getWizardHeight = function() {
+    return 1.337 * wizardWidth;
+  };
+
+  getWizardX = function (width) {
+    return width * 0.5 - wizardWidth / 2;
+  };
+
+  getWizardY = function(height) {
+    return height * 2 / 3;
+  };
+</script>
+<script src="js/game.js"></script>
 </body>
 </html>
