--- a/index.html
+++ b/index.html
@@ -191,19 +191,19 @@
     }
   };
 
-  wizardSpeed = 3;
-  wizardWidth = 70;
+  var wizardSpeed = 3;
+  var wizardWidth = 70;
 
-  getWizardHeight = function() {
+  var getWizardHeight = function() {
     return 1.337 * wizardWidth;
   };
 
-  getWizardX = function (width) {
+  var getWizardX = function (width) {
     return width * 0.5 - wizardWidth / 2;
   };
 
-  getWizardY = function(height) {
-    return height * 2 / 3;
+  var getWizardY = function(height) {
+    return height - height * 2 / 3;
   };
 </script>
 <script src="js/game.js"></script>
