--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
   };
 
   var getWizardY = function(height) {
-    return height - height * 2 / 3;
+    return height * 1 / 3;
   };
 </script>
 <script src="js/game.js"></script>
