--- a/index.html
+++ b/index.html
@@ -198,12 +198,12 @@
     return 1.337 * wizardWidth;
   };
 
-  var getWizardX = function (width) {
-    return width * 0.5 - wizardWidth / 2;
+  var getWizardX = function(width) {
+    return (width - wizardWidth) / 2;
   };
 
   var getWizardY = function(height) {
-    return height * 1 / 3;
+    return height / 3;
   };
 </script>
 <script src="js/game.js"></script>
