--- a/index.html
+++ b/index.html
@@ -181,6 +181,8 @@
   </div>
 </template>
 
+<canvas id="canvas" width="1000" style="width: 100%;"></canvas>
+
 <script>
   var fireballSize = 22;
   var getFireballSpeed = function(left) {
@@ -206,6 +208,7 @@
     return height / 3;
   };
 </script>
+<script src="js/stat.js"></script>
 <script src="js/game.js"></script>
 </body>
 </html>
