--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
   };
 </script>
 <script src="js/random.js"></script>
-<script src="js/colorize.js"></script>
+<script src="js/colorize-element.js"></script>
 <script src="js/setup.js"></script>
 <script src="js/util.js"></script>
 <script src="js/dialog.js"></script>
