--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
     return height / 3;
   };
 </script>
+<script src="js/backend.js"></script>
 <script src="js/random.js"></script>
 <script src="js/colorize-element.js"></script>
 <script src="js/setup.js"></script>
